# singlejson

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  python-publish.yml  test.yml
docs/source/: advanced.rst  conf.py  defaults.rst  development.rst  error_handling.rst  index.rst  pooling.rst  singlejson.fileutils.rst  singlejson.pool.rst  singlejson.rst
docs/source/api/: index.rst
src/singlejson/: __about__.py  __init__.py  fileutils.py  pool.py
tests/: test_atomic_save.py  test_atomic_save_and_race.py  test_default_factory_and_copy.py  test_defaults.py  test_features.py  test_pool.py  test_reload_strict_recover.py  test_serialization_settings.py  test_singlejson.py  test_thread_safety.py
