[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "singlejson"
dynamic = ["version"]
authors = [
    { name="Qrashi", email="fritz@vibe.ac" },
]
description = " Load and save json files as a global object "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]


[project.urls]
Homepage = "https://github.com/IgnyteX-Labs/singlejson"
Issues = "https://github.com/IgnyteX-Labs/singlejson/issues"

[tool.setuptools_scm]
write_to = "src/singlejson/__about__.py"
